[package]
name = "socket-programming"
version = "0.1.0"
authors = ["thinkAmi <dev.thinkami@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
# ログレベルに応じてログを制御・出力できるマクロを揃えたクレート
env_logger = "0.6.1"
# エラーハンドリングに関する機能を揃えたライブラリ
failure = "0.1.5"
