[package]
name = "webserver"
version = "0.1.0"
authors = ["thinkAmi <dev.thinkami@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 軽量なI/Oライブラリ。ノンブロッキングなTCP/UDPソケット、I/Oの多重化をサポート
mio = "0.6.11"
# 正規表現ライブラリ
regex = "1"
log = "0.4"
env_logger = "0.6.1"
failure = "0.1.5"
